--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1278,7 +1278,7 @@ p.header-widget-phone {
 }
 
 #hero-1 {
-  background-image: url(../images/temp/dental-04.jpg);
+  background-image: url(../images/temp/dental-10.jpg);
   padding-top: 30px;
 }
 
@@ -2709,7 +2709,7 @@ td.text-right {
 }
 
 .info-6-img { 
-  background-image: url(../images/info-6.jpg);
+  background-image: url(../images/temp/stephanie-1.jpg);
   background-repeat: no-repeat;
   background-position: center center;   
   background-size: cover;
@@ -2786,7 +2786,7 @@ td.text-right {
 .nav-pills .nav-link {
   background-color: transparent;
   border: 1px solid transparent;
-  color: #ccc;
+  color: rgb(133, 133, 133);
   font-size: 1rem;
   font-weight: 400;
   padding: 18px 35px;
@@ -2839,7 +2839,7 @@ td.text-right {
 #tabs-2 .nav-pills .nav-link.active,
 #tabs-2 .nav-pills .nav-link.active:hover {
   background-color: #f8f8f8;
-  color: #333;
+  color: rgb(36, 36, 36);
   border: none;
   border-right: 2px solid #855c98;
 }
@@ -2847,7 +2847,7 @@ td.text-right {
 .nav-pills .nav-link:hover {
   background-color: #f5f5f5;
   border: 1px solid #f5f5f5;
-  color: #999;
+  color: rgb(51, 51, 51);
 }
 
 #tabs-2 .tab-content h3 {
@@ -3371,7 +3371,7 @@ td.text-right {
 /*------------------------------------------*/
 
 #doctor-breadcrumbs {
-  background-image: url(../images/temp/dental-08.jpg);
+  background-image: url(../images/temp/dental-09.jpg);
   padding-top: 130px;
   padding-bottom: 60px;
   color: #000;
