Servicios actualizado con Centro Radiológico

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -296,7 +296,7 @@
 
   /* Tabs */
   #pills-tab { margin: 0 auto 50px; }
-  #tabs-2  #pills-tab {margin: 5px 0 0; padding-right: 10px; }
+  #tabs-servicios  #pills-tab {margin: 5px 0 0; padding-right: 10px; }
 
   .nav-pills .nav-link { padding: 14px 30px; margin-right: 10px; }
   .nav-pills .nav-link span { margin-top: -4px; margin-right: 10px; }
@@ -754,12 +754,12 @@
   #tabs-1 .txt-block.pc-30 { padding-left: 0; padding-right: 0; margin-top: 30px; }
 
   #pills-tab { margin: 0 auto 40px; }
-  #tabs-2  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
+  #tabs-servicios  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
 
-  #tabs-2 .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
+  #tabs-servicios .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
   .nav-pills .nav-link { font-size: 1.05rem; padding: 9px 22px; margin-right: 2px; }
-  #tabs-2 .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
-  #tabs-2 .nav-pills .nav-link.active, #tabs-2 .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
+  #tabs-servicios .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
+  #tabs-servicios .nav-pills .nav-link.active, #tabs-servicios .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
   .nav-pills .nav-link span { display: none; }
 
   .tab-pane p.mb-30 { margin-bottom: 16px; }
@@ -1247,12 +1247,12 @@
 
   #pills-tab { width: 100%;  margin: 0 auto 50px; }
   #tabs-1  #pills-tab { text-align: center; }
-  #tabs-2  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
+  #tabs-servicios  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
 
-  #tabs-1 .nav-item, #tabs-2 .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
+  #tabs-1 .nav-item, #tabs-servicios .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
   .nav-pills .nav-link { font-size: 1.15rem; padding: 16px 30px; }
-  #tabs-2 .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
-  #tabs-2 .nav-pills .nav-link.active, #tabs-2 .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
+  #tabs-servicios .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
+  #tabs-servicios .nav-pills .nav-link.active, #tabs-servicios .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
   .nav-pills .nav-link span { display: none; }
 
   .tab-pane p.mb-30 { margin-bottom: 16px; }
@@ -1733,12 +1733,12 @@
 
   #pills-tab { width: 100%;  margin: 0 auto 30px; }
   #tabs-1  #pills-tab { text-align: center; }
-  #tabs-2  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
+  #tabs-servicios  #pills-tab { margin: 0 0 40px 0; padding-right: 0; }
 
-  #tabs-1 .nav-item, #tabs-2 .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
+  #tabs-1 .nav-item, #tabs-servicios .nav-item { width: 100%; text-align: center; margin: 0 0 5px 0; }
   .nav-pills .nav-link { font-size: 1.15rem; padding: 16px 30px; }
-  #tabs-2 .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
-  #tabs-2 .nav-pills .nav-link.active, #tabs-2 .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
+  #tabs-servicios .nav-pills .nav-link { font-size: 1.15rem;  padding: 16px 20px; border-right: none; border-bottom: 2px solid transparent;  }
+  #tabs-servicios .nav-pills .nav-link.active, #tabs-servicios .nav-pills .nav-link.active:hover {border-bottom: 2px solid #00a3c8; border-right: none;}
   .nav-pills .nav-link span { display: none; }
 
   .tab-pane p.mb-30 { margin-bottom: 16px; }
